slc.alertservice Changelog
==========================

slc.alertservice 1.2.1 (2009-07-26)
-----------------------------------

- added notification_email_from_address as default from address (pilz)

slc.alertservice 1.2 (2009-06-17)
---------------------------------

- changed svn:ignore (thomasw)

slc.alertservice 1.1 (2009-05-12)
---------------------------------

- Packaged egg (pilz)

slc.alertservice 1.0 (2008-03-31)
---------------------------------

- Initial port